# FormGenWidgets-Qt

./: CMakeLists.txt  FormGenWidgets-QtConfig.cmake.in  README.md
lib/MathUtils/: mathutils.cpp  mathutils.h
lib/sorted_sequence/: sorted_sequence.h
src/: formgencompositionmodels.cpp  formgencompositionmodels.h  formgencompositionwidgets.cpp  formgencompositionwidgets.h  formgencompositionwidgets_p.h  formgenfilelisthead.ui  formgenlistbaghead.ui  formgenregularwidgets.cpp  formgenregularwidgets.h  formgenregularwidgets_p.cpp  formgenregularwidgets_p.h  formgenwidgets-qt.h  formgenwidgets_global.h.cmake  formgenwidgetsbase.cpp  formgenwidgetsbase.h
test/manual/: main.cpp
